# sizing-and-procurement

./: .dockerignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml
config/: atc_input.properties  elastic.properties  json_to_minio.properties  minio.properties  pdn.properties  procurement.properties  rabbit.properties  sizing_reserves.properties  to_elastic_logger.properties  transparency_data.properties
docs/: conf.py  index.rst  modules.rst  py.atc_data_transfer.rst  py.common.rst  py.data_classes.rst  py.handlers.rst  py.parsers.rst  py.procurement.rst  py.sizing_of_reserves.rst
py/atc_data_transfer/: from_elastic_to_rabbit.py  from_rabbit_to_elastic.py
py/common/: config_parser.py  df_functions.py  functions.py  ref_constants.py  time_functions.py  to_elastic_logger.py
py/data_classes/: enums.py  task_classes.py
py/data_classes/xml/: base_xml.py  (+4 more)
py/handlers/: elastic_handler.py  minio_handler.py  rabbit_handler.py
py/parsers/: file_types.py  json_to_calculation_result.py  parser_constants.py  xlsx_to_calculation_result.py  xml_to_calculation_result.py
py/procurement/: constants.py  dummy_tso.py  procurement_common.py  procurement_from_elastic.py  procurement_output.py  procurement_result_to_dto.py  quarterly_report.py  realised_data_check.py  transparency_data.py
py/sizing_of_reserves/: minimum_reserve_capacity_calc.py  report_generation.py  sizing_data_classes.py
resources/examples/: LT_LV_ATC.xml  LV_EE_ATC.xml  reserveAllocationResult_10X1001A1001A39W_20250120_1.xml  reserveAllocationResult_10X1001A1001A39W_20250120_2.xml
(+7 files in other folders)
